--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -69,7 +69,7 @@
       border: 1px solid #f2f2f2;
       border-radius: 10px;
       background: #f5f5f5;
-    //   color: #000;
+      //   color: #000;
       font-family: Lato;
       font-size: 16px;
       font-style: normal;
@@ -81,11 +81,22 @@
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
-    //   margin-bottom: 21px;
+      //   margin-bottom: 21px;
       margin-top: 0;
     }
     .btn {
       width: 100%;
+      border-radius: 10px;
+      background: #4285f4;
+      color: #fff;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
   }
 
@@ -98,8 +109,8 @@
     font-weight: 400;
     line-height: normal;
 
-    span{
-        color:#346BD4; 
+    span {
+      color: #346bd4;
     }
   }
 }
