feat: Cards implemented

--- a/src/components/adduser/adduser.scss
+++ b/src/components/adduser/adduser.scss
@@ -1,8 +1,6 @@
 .adduser {
-  //   flex: 1;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-  // padding: 69px 199px;
   border-radius: 20px;
   border: 2px solid #e0e0e0;
   background: #fff;
@@ -20,7 +18,7 @@
     .control {
       align-self: center;
       padding: 12.8px;
-      background-color: #F2F2F2;
+      background-color: #f2f2f2;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -29,13 +27,12 @@
 
     h2 {
       color: #858585;
-      font-feature-settings: 'clig' off, 'liga' off;
+      font-feature-settings: "clig" off, "liga" off;
       font-family: Figtree;
       font-size: 16px;
       font-style: normal;
       font-weight: 600;
       line-height: 24px;
-
     }
   }
 }
