--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,6 +1,5 @@
 .navbar {
   height: 70px;
-  // border-bottom: 0.5px solid rgb(231, 228, 228);
   display: flex;
   align-items: center;
   font-size: 14px;
@@ -17,9 +16,7 @@
       color: #000;
       font-family: Montserrat;
       font-size: 24px;
-      font-style: normal;
       font-weight: 700;
-      line-height: normal;
     }
 
     .items {
@@ -29,7 +26,6 @@
       .search {
         display: flex;
         align-items: center;
-        /* border: 0.5px solid #000; */
         padding: 6px 32px 6px 15px;
         background-color: #fff;
 
@@ -38,11 +34,9 @@
           outline: none;
           background: transparent;
           color: #b0b0b0;
-          /* font-family: Lato; */
+          font-family: Lato;
           font-size: 14px;
-          font-style: normal;
           font-weight: 400;
-          line-height: normal;
         }
       }
 
@@ -50,8 +44,7 @@
         display: flex;
         align-items: center;
         margin-right: 28px;
-        /* position: relative; */
-
+        
         .icon {
           font-size: 20px;
           width: 20px;
