--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,41 +1,32 @@
 .login {
   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  
 
   .left {
     flex: 1;
     display: flex;
     flex-direction: column;
-    // align-items: flex-start;
     justify-content: space-between;
 
     .top {
-        padding: 20px;
-        // display: flex;
-        // align-items: center;
-        // justify-content: flex-start;
+      padding: 20px;
 
       .logo {
         color: #fff;
         font-family: Poppins;
         font-size: 24px;
-        font-style: normal;
         font-weight: 700;
-        line-height: 122.687%; /* 29.445px */
+        line-height: 122.687%;
         letter-spacing: 0.36px;
       }
     }
 
     .center {
       display: flex;
-      // flex-direction: column;
       align-items: center;
       justify-content: center;
-      // gap: 350px;
+
       .title {
         color: #fff;
         font-family: Montserrat;
