feat: Implemented Auth

--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -24,8 +24,8 @@
 
   .accounts {
     display: flex;
-    // align-items: center;
-    // justify-content: center;
+    align-items: center;
+    justify-content: center;
     gap: 28px;
 
     .google {
@@ -33,6 +33,7 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
+      cursor: pointer;
     }
   }
 
