--- a/src/components/usercard/userCard.scss
+++ b/src/components/usercard/userCard.scss
@@ -78,11 +78,10 @@
 
           .subtitle {
             margin: 0;
-            color: var(--light-bulma, #231f20);
+            color:#231f20;
             font-feature-settings: "clig" off, "liga" off;
             font-family: Figtree;
             font-size: 14px;
-            font-style: normal;
             font-weight: 400;
             line-height: 24px;
             text-decoration-line: underline;
