--- a/src/components/basic/basic.scss
+++ b/src/components/basic/basic.scss
@@ -7,19 +7,17 @@
   align-items: flex-start;
   gap: 24px;
   margin-bottom: 24px;
-  //   flex-shrink: 0;
+
   .firstSeg {
     width: 100%;
     .forms {
-      // width: 100%;
-      .heading{
+      .heading {
         color: #000;
         font-feature-settings: "clig" off, "liga" off;
         font-family: Figtree;
         font-size: 16px;
-        font-style: normal;
         font-weight: 400;
-        line-height: 24px; /* 150% */
+        line-height: 24px; 
       }
       .inputs {
         display: flex;
@@ -36,12 +34,3 @@
     }
   }
 }
-
-// .inputs {
-//   display: flex;
-//   padding: 12px 16px;
-//   flex-direction: column;
-//   align-items: flex-start;
-//   align-self: stretch;
-//   width: 100%;
-// }
