--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -7,9 +7,7 @@
     color: #000;
     font-family: Montserrat;
     font-size: 36px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     margin-bottom: 5px;
   }
 
@@ -17,9 +15,7 @@
     color: #000;
     font-family: Lato;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
   }
 
   .accounts {
@@ -44,7 +40,6 @@
     padding: 32px;
     flex-direction: column;
     align-items: flex-start;
-    // gap: 21px;
     margin-bottom: 24px;
     border-radius: 20px;
     background: #fff;
@@ -53,9 +48,7 @@
       color: #000;
       font-family: Lato;
       font-size: 16px;
-      font-style: normal;
       font-weight: 400;
-      line-height: normal;
       margin-bottom: 10px;
       margin-top: 0;
     }
@@ -70,19 +63,15 @@
       border: 1px solid #f2f2f2;
       border-radius: 10px;
       background: #f5f5f5;
-      //   color: #000;
       font-family: Lato;
       font-size: 16px;
-      font-style: normal;
       font-weight: 400;
     }
     .forgot {
       color: #346bd4;
       font-family: Lato;
       font-size: 16px;
-      font-style: normal;
       font-weight: 400;
-      //   margin-bottom: 21px;
       margin-top: 0;
     }
     .btn {
@@ -93,22 +82,18 @@
       text-align: center;
       font-family: Montserrat;
       font-size: 16px;
-      font-style: normal;
       font-weight: 700;
-      line-height: normal;
       padding-top: 10px;
       padding-bottom: 10px;
     }
   }
 
   .signin {
-    color: var(--Secondary-Text, #858585);
+    color: #858585;
     text-align: center;
     font-family: Lato;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 
     span {
       color: #346bd4;
