--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,32 +1,25 @@
-.home{
-    display: flex;
+.home {
+  display: flex;
 
-    .homeContainer{
-        flex: 6;
-        background: #F8FAFF;
-        padding: 20px;
+  .homeContainer {
+    flex: 6;
+    background: #f8faff;
+    padding: 20px;
 
-        .widgets{
-            display: flex;
-            // padding: 20px;
-            gap: 17px;
-            // margin: 20px;
-        }
-
-        .center{
-            display: flex;
-            // margin-left: 20px;
-            // margin-right: 20px;
-            margin-top: 40px;
-            margin-bottom: 40px;
-        }
-
-        .bottom{
-            display: flex;
-            gap: 40px;
-            // margin-left: 20px;
-            // margin-right: 20px;
-
-        }
+    .widgets {
+      display: flex;
+      gap: 17px;
     }
+
+    .center {
+      display: flex;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    .bottom {
+      display: flex;
+      gap: 40px;
+    }
+  }
 }
